sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: Boolean does not take parameters
      	swap(i, i+gap);
            ^