sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var gap = getValueCount()
  var swap = true;
  while (gap>1 || swap == true){
  	swap = false;
  	for (i<-0 to getValueCount()-gap-1){
    	if (isSmaller(i, i+gap)){
      	swap(i, i+gap);
        swap=true
    	}
  	}
    if (gap>1){
      gap = (gap.asInstanceOf[Double] / 1.3).asInstanceOf[Int]
    }
  }
}